--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -1,26 +1,33 @@
-﻿@model IEnumerable<Riipen_SSD.Team>
+﻿@model IEnumerable<Riipen_SSD.ViewModels.TeamCriteriaScoreVM>
 
 @{
     ViewBag.Title = "contest";
 }
 
-<h2>@if (ViewBag.ContestName != null)
-{
-    @ViewBag.ContestName
-}
-
-    </h2>
+<h2>contest</h2>
 
 <p>
- All teams
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ContestId)
+            @Html.DisplayNameFor(model => model.TeamID)
         </th>
         <th>
-           Team name
+            @Html.DisplayNameFor(model => model.CriteriaID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.TeamName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.YourCurrentScore)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.FinalScore)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.JudgeNotSubmitted)
         </th>
         <th></th>
     </tr>
@@ -28,18 +35,25 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.ContestId)
+            @Html.DisplayFor(modelItem => item.TeamID)
         </td>
         <td>
-            
-
-            @Html.ActionLink(item.Name, "Team", new { teamId = item.Id}) 
-
-</td>
+            @Html.DisplayFor(modelItem => item.CriteriaID)
+        </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.TeamName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.YourCurrentScore)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.FinalScore)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.JudgeNotSubmitted)
+        </td>
+        <td>
+            @Html.ActionLink("View", "Team", new { teamID = item.TeamID}) 
         </td>
     </tr>
 }
