Administrators now have power to view everything, nav bar is fixed with the proper action links as well

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "ContestDetails";
 }
 
-<h2>ContestDetails</h2>
+<h2>ContestDetails</h2>                                                                             
 
 <div>
-    <h4>ContestDetailsVM</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -44,6 +43,9 @@
 
     </dl>
 </div>
+        <div class="contestScores">
+            @Html.ActionLink("View Scores", "contestScores", "Admin")
+        </div>
 <table class="table">
     <caption>Judges</caption>
     <tr>
