--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Shared/_Layout.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Shared/_Layout.cshtml
@@ -6,8 +6,23 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <style>
+            .navbar-brand 
+    {
+                margin:0;
+                padding: 0;
+    }
+            .navbar-brand img{
+                max-height:50px;
+            }
+        .navbar-default{
+            background-color: #ffffff;
+            color: #ffffff;
+        }
+    </style>
 </head>
+
+
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -16,8 +31,29 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </button>@{
+                    if (Request.IsAuthenticated && (User.IsInRole("Admin")))
+                    {
+                        <a class="navbar-brand" href='@Url.Action("Index", "Admin")'>
+                           <img src="@Url.Content("~/Images/logo-orange.png")" />
+                        </a>
+                    }
+                    else if (Request.IsAuthenticated && (User.IsInRole("Judge")))
+                    {
+                        <a class="navbar-brand"  href='@Url.Action("Index", "Judge")'>
+                            <img src="@Url.Content("~/Images/logo-orange.png")" />
+                        </a>
+                    }
+                    else if (Request.IsAuthenticated)
+                    {
+                        <a class="navbar-brand" href='@Url.Action("Index", "Judge")'>
+                            <img src="@Url.Content("~/Images/logo-orange.png")" />
+                        </a>
+                    }
+
+
+                }
+    
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
