--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -32,6 +32,8 @@
             @Html.DisplayFor(modelItem => item.TeamID)
         </td>
         <td>
+            @Html.ActionLink(item.TeamName, "TeamScores", new { teamID=item.TeamID,contestID = ViewBag.ContestID })
+            
             @Html.DisplayFor(modelItem => item.TeamName)
         </td>
         <td>
