put your team in the top of the list

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Participant/Contests.cshtml
@@ -4,6 +4,19 @@
     ViewBag.Title = "Contests";
 }
 
+<style>
+
+    tr:nth-child(2){
+          color:blue;
+        font-weight:bold;
+
+    }
+   table tr:nth-child(2) a {
+
+        color:BLUE;
+        font-weight:bold;
+    }
+</style>
 
 <p>
     @if (ViewBag.ContestName != null) {
