Re-added Contest Details

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Riipen_SSD.AdminViewModels.ContestDetailsVM
+﻿@model Riipen_SSD.ViewModels.ContestVM
 
 @{
     ViewBag.Title = "ContestDetails";
