--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -4,18 +4,17 @@
     ViewBag.Title = "team";
 }
 
-<h2>team</h2>
 
 <div>
-    <h4>SingleJudgeCriteriaScoreVM</h4>
+  
     @if (ViewBag.TeamName != null)
     {
-        @ViewBag.TeamName;
+       <span>Team: </span> @ViewBag.TeamName <br />
     }
 
     @if (ViewBag.ContestName != null)
     {
-        @ViewBag.ContestName;
+    <span>Contest: </span>    @ViewBag.ContestName;
     }
    
     
