--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/Index.cshtml
@@ -2,23 +2,49 @@
 
 @{
     ViewBag.Title = "Index";
+
 }
 
-<h2>All contests</h2>
+@using (Html.BeginForm("Index", "Judge", FormMethod.Get))
+{
+    @Html.AntiForgeryToken()
+    <input type="text" name="searchAContest" value="@ViewBag.searchStringValue" placeholder="Search a contest"  style="border:1px solid #ddd;margin-top:10px">
+    <button type="submit">Submit</button>
+}
+
+
+@if (ViewBag.searchStringValue == "")
+{
+    <h2>All contests</h2>
+}
+else
+{
+    <h2>Result for: @ViewBag.searchStringValue</h2>
+}
+
+<div class="dropdown" style="margin-top:10px;margin-bottom:10px;float:right">
+    Sort: <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="sortMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+        @ViewBag.sortStringValue
+        <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" aria-labelledby="sortMenu">
+        <li>@Html.ActionLink("Latest contests","Index",new { searchAContest=ViewBag.searchStringValue, sortContests="Latest"})</li>
+        <li>@Html.ActionLink("Name", "Index", new { searchAContest = ViewBag.searchStringValue, sortContests = "Name" })</li>
+        <li>@Html.ActionLink("Location", "Index", new { searchAContest = ViewBag.searchStringValue, sortContests = "Location" })</li>
+    </ul>
+</div>
 
 
 <table class="table">
     <tr>
         <th>
-            contest name
-            @*@Html.DisplayNameFor(model => model.Name)*@
+           @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Location)
         </th>
         <th>
-            start time
-            @*@Html.DisplayNameFor(model => model.StartTime)*@
+          @Html.DisplayNameFor(model => model.StartTime)
         </th>
         <th></th>
     </tr>
