Add private comment to feedback

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/contest.cshtml
@@ -119,7 +119,7 @@ else
         <td>
             @if (item.YourCurrentScore != null && !item.Submitted)
             {
-                @Html.ActionLink("Submit Now", "Team", new { teamID = item.TeamID })
+                @Html.ActionLink("Edit Now", "Team", new { teamID = item.TeamID })
 
             }
             
