Add required to score radio input

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Judge/team.cshtml
@@ -89,7 +89,7 @@
                                 }
                                 <div class="scoreDiv" style="float:left">
                                     <span>@i</span><br />
-                                    <input type="radio" name="@scoreName" value="@i" @checkValue class="radioScore">
+                                    <input type="radio" name="@scoreName" value="@i" @checkValue class="radioScore" required>
                                 </div>
                                 checkValue = "";
 
